# visqol-cmake

./: .gitignore  CMakeLists.txt  README.md
scripts/: profile_memory_batch.sh  profile_memory_single.sh
src/: visqol_manager.cc
